replace collect(Collectors.toList()) with toList(); use Map.of instead of custom Maps.of methods; use List.of instead of custom Lists.of methods;