@@ -6,7 +6,6 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class SliderDoubleList extends AbstractSliderList<Double> {
 
@@ -24,6 +23,6 @@ public class SliderDoubleList extends AbstractSliderList<Double> {
     public List<Double> getValue() {
         return uiList.getElements().stream()
             .map(Slider::getValueD)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
