@@ -1,16 +1,14 @@
 package com.github.argon.sos.moreoptions.ui.json.factory;
 
 import com.github.argon.sos.mod.sdk.game.action.Resettable;
-import com.github.argon.sos.mod.sdk.ui.*;
 import com.github.argon.sos.mod.sdk.json.element.*;
-import menu.ui.ColorPicker;
-import com.github.argon.sos.mod.sdk.ui.Slider;
-import com.github.argon.sos.mod.sdk.ui.SliderDoubleList;
+import com.github.argon.sos.mod.sdk.ui.*;
+import com.github.argon.sos.moreoptions.ui.json.JsonUiMapper;
 import com.github.argon.sos.moreoptions.ui.json.factory.builder.JsonUiElementListBuilder;
 import init.sprite.UI.UI;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import com.github.argon.sos.moreoptions.ui.json.JsonUiMapper;
+import menu.ui.ColorPicker;
 import menu.ui.UiFactory;
 import snake2d.util.gui.renderable.RENDEROBJ;
 import snake2d.util.sprite.text.Font;
@@ -19,7 +17,6 @@ import java.nio.file.Path;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * For creating {@link JsonUiElementSingle}s.
@@ -195,7 +192,7 @@ public class JsonUiElementFactory implements Resettable {
             .valueConsumer((select, jsonArray) -> {
                 List<String> selected = jsonArray.as(JsonString.class).stream()
                     .map(JsonString::getValue)
-                    .collect(Collectors.toList());
+                    .toList();
 
                 select.getElement().setValue(selected);
             })
@@ -234,7 +231,7 @@ public class JsonUiElementFactory implements Resettable {
             .valueConsumer((stringSelect, jsonArray) -> {
                 List<String> selected = jsonArray.as(JsonString.class).stream()
                     .map(JsonString::getValue)
-                    .collect(Collectors.toList());
+                    .toList();
 
                 stringSelect.getElement().setValue(selected);
             })
@@ -266,7 +263,7 @@ public class JsonUiElementFactory implements Resettable {
             .valueConsumer((stringSelect, jsonArray) -> {
                 List<Double> selected = jsonArray.as(JsonDouble.class).stream()
                     .map(JsonDouble::getValue)
-                    .collect(Collectors.toList());
+                    .toList();
 
                 stringSelect.getElement().setValue(selected);
             })
@@ -292,7 +289,7 @@ public class JsonUiElementFactory implements Resettable {
             .valueConsumer((stringSelect, jsonArray) -> {
                 List<String> selected = jsonArray.as(JsonString.class).stream()
                     .map(JsonString::getValue)
-                    .collect(Collectors.toList());
+                    .toList();
 
                 stringSelect.getElement().setValue(selected);
             })
