@@ -1,20 +1,16 @@
 package menu.ui;
 
-import com.github.argon.sos.mod.sdk.ui.*;
 import com.github.argon.sos.mod.sdk.game.util.UiUtil;
 import com.github.argon.sos.mod.sdk.json.JsonMapper;
 import com.github.argon.sos.mod.sdk.json.element.*;
 import com.github.argon.sos.mod.sdk.log.Logger;
 import com.github.argon.sos.mod.sdk.log.Loggers;
-import com.github.argon.sos.mod.sdk.util.Lists;
-import com.github.argon.sos.mod.sdk.ui.Slider;
-import com.github.argon.sos.mod.sdk.ui.SliderDoubleList;
-import com.github.argon.sos.mod.sdk.ui.SliderIntegerList;
+import com.github.argon.sos.mod.sdk.ui.*;
+import com.github.argon.sos.moreoptions.ui.json.JsonUiMapper;
 import init.sprite.UI.UI;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import menu.MenuUi;
-import com.github.argon.sos.moreoptions.ui.json.JsonUiMapper;
 import org.jetbrains.annotations.Nullable;
 import snake2d.util.file.Json;
 import snake2d.util.file.JsonE;
@@ -26,7 +22,6 @@ import util.gui.misc.GHeader;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor(access = AccessLevel.PRIVATE)
 public class UiFactory {
@@ -88,7 +83,7 @@ public class UiFactory {
         List<String> values = jsonArray.getElements().stream()
             .filter(element -> element instanceof JsonString)
             .map(JsonString.class::cast)
-            .map(JsonString::getValue).collect(Collectors.toList());
+            .map(JsonString::getValue).toList();
 
         return DropDownList.builder()
             .values(values)
@@ -107,7 +102,7 @@ public class UiFactory {
             .map(JsonDouble.class::cast)
             .map(JsonDouble::getValue)
             .map(elementSupplier)
-            .collect(Collectors.toList());
+            .toList();
 
         return SliderDoubleList.builder()
             .label(buttonTitle)
@@ -125,7 +120,7 @@ public class UiFactory {
             .map(JsonLong::getValue)
             .map(Long::intValue)
             .map(elementSupplier)
-            .collect(Collectors.toList());
+            .toList();
 
         return SliderIntegerList.builder()
             .label(buttonTitle)
@@ -153,7 +148,7 @@ public class UiFactory {
                 .filter(element -> element instanceof JsonString)
                 .map(JsonString.class::cast)
                 .map(JsonString::getValue)
-                .collect(Collectors.toList()));
+                .toList());
         }
 
         ButtonMenu.ButtonMenuBuilder<String> menuBuilder = ButtonMenu.builder();
@@ -175,7 +170,7 @@ public class UiFactory {
     }
 
     public static Slider slider(JsonDouble jsonElement, int min, int max, int step, int resolution) {
-        Slider slider = slider(min, max, step, Lists.of())
+        Slider slider = slider(min, max, step, List.of())
             .valueD(jsonElement.getValue(), resolution)
             .valueDisplay(Slider.ValueDisplay.PERCENTAGE)
             .build();
